 - new option "-tn" for terminal type

  - background white leads to lightgrey for applications.
    This allows dialog-programms to look nice (e.g. LISA)
  - bugfixes in the event loop. First version that seems to work properly :) 
 
  - black-on-black fixed: now black-on-white if a 
    color allocation fails
  - multiline selection fixed again
 
  - scrollbar problems fixed 
  - should compile on Linux/Alpha now (Christian Czezatke)
  
  - fixed the multiline selection again
  - kdisplays changes gets recognized during runtime now
  - small bugfix for backspace
  - greater bugfix for eventhandling (fix of the deep-bug fix)
  - usage of KApplication::invokeHTMLHelp(...)
  - kvt_version.h

since kvt-0.13:
  - fixed all the bugs introduced by the multiline selection
    patch
  - fixed a very deep bug which was there since the early times
    of kvt. In fact the hand-in-hand working between the old
    rxvt main loop and Qt's main loop was broken. This bug was
    reponsible for occasional missunderstandings of terminal-sequences.
	
since kvt-0.12
  - hopefully fixed kvt's pasting speed to Motif applications	
  - kvt can now handle multiline selections without breaking them into
    multiple lines

since kvt-0.11
   - kvt should work ok with TERM=xterm-color now!

     This means fixed Home/End and BackSpace/Delete handling, fixed
     colorhandling, new cursor-visibility sequences, some other new
     sequences ....  In fact Xemacs  works great now inside a kvt: 
     korrect keybindings and nice syntaxhighlighting :-)
     Also the S.u.S.E yast works fine and colorful now. And the midnight
     commaner, too. :-))

   - a few deep rxvt bugfixes

  - if you install kvt-color (see instructions in ./etc/) there is also
     support for ACS_BLOCK and ACS_BOARD. This makes for
     example the scrollbar of yast visible (but you need TERM=kvt-color for
     that!) Another way would be to replace your xterm-color definitions with
     those in ./etc/xterm-color
